modified img path

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src='https://www.google.com/recaptcha/api.js'></script>
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous"> -->
-    <link href="/css/main.css" rel="stylesheet">
-    <link href="/css/index.css" rel="stylesheet">
-    <script src="/js/index.js"></script>
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
+    <script src="js/index.js"></script>
 </head>
 
 <body>
@@ -41,7 +41,7 @@
                                 <a class="nav-link" href="#">Global Sites</a>
                             </li>
                             <li class="nav-item ">
-                                <a href="#"><img src="/assets/icons/ico_facebook.png" alt="FB" style="width:20px;height:20px;"></a>
+                                <a href="#"><img src="assets/icons/ico_facebook.png" alt="FB" style="width:20px;height:20px;"></a>
                             </li>
                         </ul>
                     </div>
@@ -204,7 +204,7 @@
                                         <div class="TNC">
                                             <div class="checkboxTNC"> <input type="checkbox" id="privacyNotice" name="privacyNotice" value="privacyNoticeCheckBox">
                                             </div>
-                                            <div class="labelTNC"><label for="termsCondition"> I have read and understood MSIG’s <a href="/assets/pdf/PrivacyNotice_Eng_May2017.pdf" download>Privacy Notice</a>  and agree to MSIG processing my personal data for the purposes and in the manners set out in the Privacy Notice.</label>
+                                            <div class="labelTNC"><label for="termsCondition"> I have read and understood MSIG’s <a href="assets/pdf/PrivacyNotice_Eng_May2017.pdf" download>Privacy Notice</a>  and agree to MSIG processing my personal data for the purposes and in the manners set out in the Privacy Notice.</label>
                                             </div>
 
                                         </div>
@@ -315,7 +315,7 @@
                                         <div class="TNC">
                                             <div class="checkboxTNC"> <input type="checkbox" id="prodEnqprivacyNotice" name="privacyNotice" value="privacyNoticeCheckBox">
                                             </div>
-                                            <div class="labelTNC"><label for="termsCondition"> I have read and understood MSIG’s <a href="/assets/pdf/PrivacyNotice_Eng_May2017.pdf" download>Privacy Notice</a>  and agree to MSIG processing my personal data for the purposes and in the manners set out in the Privacy Notice.</label>
+                                            <div class="labelTNC"><label for="termsCondition"> I have read and understood MSIG’s <a href="assets/pdf/PrivacyNotice_Eng_May2017.pdf" download>Privacy Notice</a>  and agree to MSIG processing my personal data for the purposes and in the manners set out in the Privacy Notice.</label>
                                             </div>
 
                                         </div>
@@ -345,7 +345,7 @@
                             </div>
                             <div>
                                 <p class="p-l-r-15 p-t-b-15">Use the form below to drop us an email and we will be in touch with you soon.</p>
-                                <p class="p-l-r-15 p-t-b-15">To understand how we manage your feedback and complaints, you can refer to<br><a class="pdfLink" href="/assets/pdf/MSIGCFMP.pdf" download>MSIG’s Feedback and Complaint Handling Procedure</a></p>
+                                <p class="p-l-r-15 p-t-b-15">To understand how we manage your feedback and complaints, you can refer to<br><a class="pdfLink" href="assets/pdf/MSIGCFMP.pdf" download>MSIG’s Feedback and Complaint Handling Procedure</a></p>
                                 <div class="generalEnquirySection">
 
 
@@ -393,7 +393,7 @@
                                         <div class="TNC">
                                             <div class="checkboxTNC"> <input type="checkbox" id="feedbackprivacyNotice" name="privacyNotice" value="privacyNoticeCheckBox">
                                             </div>
-                                            <div class="labelTNC"><label for="termsCondition"> I have read and understood MSIG’s <a href="/assets/pdf/PrivacyNotice_Eng_May2017.pdf" download>Privacy Notice</a>  and agree to MSIG processing my personal data for the purposes and in the manners set out in the Privacy Notice.</label>
+                                            <div class="labelTNC"><label for="termsCondition"> I have read and understood MSIG’s <a href="assets/pdf/PrivacyNotice_Eng_May2017.pdf" download>Privacy Notice</a>  and agree to MSIG processing my personal data for the purposes and in the manners set out in the Privacy Notice.</label>
                                             </div>
 
                                         </div>
@@ -420,8 +420,8 @@
                             </div>
                             <div>
                                 <p class="p-l-r-15 p-t-b-15">We at MSIG are committed to protecting and safe-guarding the privacy of your Personal Data. Please click on either one of the following two to read on:
-                                    <a class="pdfLink" href="/assets/pdf/PrivacyNotice_Eng_May2017.pdf" download>Privacy Notice (English)</a>
-                                    <a class="pdfLink" href="/assets/pdf/PrivacyNotice_BM_May2017.pdf" download>Privacy Notice (Bahasa Malaysia)</a></p>
+                                    <a class="pdfLink" href="assets/pdf/PrivacyNotice_Eng_May2017.pdf" download>Privacy Notice (English)</a>
+                                    <a class="pdfLink" href="assets/pdf/PrivacyNotice_BM_May2017.pdf" download>Privacy Notice (Bahasa Malaysia)</a></p>
                                 <div class="generalEnquirySection">
 
                                     <form name="dataEnqForm" id="dataCorrectionForm" action="#" autocomplete="off" class="geForm p-l-r-15">
@@ -460,7 +460,7 @@
                                         <div class="TNC">
                                             <div class="checkboxTNC"> <input type="checkbox" id="datacorreectionprivacyNotice" name="privacyNotice" value="privacyNoticeCheckBox">
                                             </div>
-                                            <div class="labelTNC"><label for="termsCondition"> I have read and understood MSIG’s <a href="/assets/pdf/PrivacyNotice_Eng_May2017.pdf" download>Privacy Notice</a>  and agree to MSIG processing my personal data for the purposes and in the manners set out in the Privacy Notice.</label>
+                                            <div class="labelTNC"><label for="termsCondition"> I have read and understood MSIG’s <a href="assets/pdf/PrivacyNotice_Eng_May2017.pdf" download>Privacy Notice</a>  and agree to MSIG processing my personal data for the purposes and in the manners set out in the Privacy Notice.</label>
                                             </div>
 
                                         </div>
@@ -475,7 +475,7 @@
                                         <!-- alternative pdf  -->
                                         <div class="altReturn">
                                             <p class="altText">Alternatively, you could use the following
-                                                <a class="pdfLink1" href="/assets/pdf/MSIG-Personal-Data-Access-or-Correction-Request-Form.pdf" download>Form</a> and return it back to: </p>
+                                                <a class="pdfLink1" href="assets/pdf/MSIG-Personal-Data-Access-or-Correction-Request-Form.pdf" download>Form</a> and return it back to: </p>
                                             <div class="altAddress">
                                                 <span>
                                                         Data Protection Officer MSIG Insurance (Malaysia) Bad,</span> <span>Level 15, Menara Hap Seng 2,</span> <span>Plaza Hap Seng</span> <span>No. 1 Jalan P. Ramlee,<span>                             <span>50250 Kuala Lumpur</span>
@@ -501,7 +501,7 @@
                                     <div class="jumboRow">
                                         <div class="jumboColumnIMG">
                                             <div class="jumboColumn1">
-                                                <img src="/assets/icons/Motor Assist.svg" alt="Motor Assist">
+                                                <img src="assets/icons/Motor Assist.svg" alt="Motor Assist">
 
                                             </div>
                                         </div>
@@ -519,7 +519,7 @@
                                     <div class="jumboRow">
                                         <div class="jumboColumnIMG">
                                             <div class="jumboColumn1">
-                                                <img src="/assets/icons/Motor Assist.svg" alt="Home Assist">
+                                                <img src="assets/icons/Motor Assist.svg" alt="Home Assist">
                                             </div>
                                         </div>
                                         <div class="jumboColumnTEXT">
@@ -536,7 +536,7 @@
                                     <div class="jumboRow">
                                         <div class="jumboColumnIMG">
                                             <div class="jumboColumn1">
-                                                <img src="/assets/icons/MSIG Assist (International).svg" alt="Msig Intl Assist">
+                                                <img src="assets/icons/MSIG Assist (International).svg" alt="Msig Intl Assist">
                                             </div>
                                         </div>
                                         <div class="jumboColumnTEXT">
@@ -552,7 +552,7 @@
                                     <div class="jumboRow">
                                         <div class="jumboColumnIMG">
                                             <div class="jumboColumn1">
-                                                <img src="/assets/icons/MSIG Assist (Domestic).svg" alt="Msig Dom Assist">
+                                                <img src="assets/icons/MSIG Assist (Domestic).svg" alt="Msig Dom Assist">
                                             </div>
                                         </div>
                                         <div class="jumboColumnTEXT">
@@ -580,7 +580,7 @@
                                     <div class="jumboRow">
                                         <div class="jumboColumnIMG">
                                             <div class="jumboColumn1">
-                                                <img src="/assets/icons/CS Hotline.svg" alt="Cs Hotline">
+                                                <img src="assets/icons/CS Hotline.svg" alt="Cs Hotline">
 
                                             </div>
                                         </div>
@@ -601,7 +601,7 @@
                                     <div class="jumboRow">
                                         <div class="jumboColumnIMG">
                                             <div class="jumboColumn1">
-                                                <img src="/assets/icons/Fax.svg" alt="Fax">
+                                                <img src="assets/icons/Fax.svg" alt="Fax">
                                             </div>
                                         </div>
                                         <div class="jumboColumnTEXT">
@@ -618,7 +618,7 @@
                                     <div class="jumboRow">
                                         <div class="jumboColumnIMG">
                                             <div class="jumboColumn1">
-                                                <img src="/assets/icons/Bancassurance Hotline.png" alt="Bancassurance">
+                                                <img src="assets/icons/Bancassurance Hotline.png" alt="Bancassurance">
                                             </div>
                                         </div>
                                         <div class="jumboColumnTEXT">
@@ -634,7 +634,7 @@
                                     <div class="jumboRow">
                                         <div class="jumboColumnIMG">
                                             <div class="jumboColumn1">
-                                                <img src="/assets/icons/Visit Us.svg" alt="Visit Us">
+                                                <img src="assets/icons/Visit Us.svg" alt="Visit Us">
                                             </div>
                                         </div>
                                         <div class="jumboColumnTEXT">
@@ -868,7 +868,7 @@
                             <div class="col-xs-12 col-sm-2">
                                 <div class="crossell">
                                     <div class="crossell-with-cta-only">
-                                        <a href="https://www.msig.com.my/PDF/annualreport/MSIG_Annual_Report_2020.pdf" target="_blank"><img src="/assets/icons/ico-annual-report.png"><span>ANNUAL REPORT</span></a>
+                                        <a href="https://www.msig.com.my/PDF/annualreport/MSIG_Annual_Report_2020.pdf" target="_blank"><img src="assets/icons/ico-annual-report.png"><span>ANNUAL REPORT</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -879,13 +879,13 @@
                     <div class="group-logo">
                         <ul class="groupUL" style="margin-top:0px;">
                             <li>
-                                <a href="http://www.insuranceinfo.com.my/" target="_blank"><img src="/assets/icons/logo-insurance-info.png"></a>
+                                <a href="http://www.insuranceinfo.com.my/" target="_blank"><img src="assets/icons/logo-insurance-info.png"></a>
                             </li>
                             <li>
-                                <a href="http://www.piam.org.my/" target="_blank"><img src="/assets/icons/logo-persatuan-insuransam-malaysia.png"></a>
+                                <a href="http://www.piam.org.my/" target="_blank"><img src="assets/icons/logo-persatuan-insuransam-malaysia.png"></a>
                             </li>
                             <li>
-                                <a href="http://www.bnm.gov.my" target="_blank"><img src="/assets/icons/logo-bank-negara-malaysia.png"></a>
+                                <a href="http://www.bnm.gov.my" target="_blank"><img src="assets/icons/logo-bank-negara-malaysia.png"></a>
                             </li>
                         </ul>
                     </div>
@@ -912,7 +912,7 @@
                     <div class="copyright" style="padding-top:2px;">All Rights Reserved. Copyright &copy; 2021 MSIG Insurance (Malaysia) Bhd Registration No. 197901002705 (46983-W)</div>
                 </div>
                 <div class="col-xs-12 col-sm-3">
-                    <div class="groupUL footer-logo" style="padding-top:20px;"><img src="/assets/icons/logo-insurance-group.png"></div>
+                    <div class="groupUL footer-logo" style="padding-top:20px;"><img src="assets/icons/logo-insurance-group.png"></div>
                 </div>
             </div>
         </div>
