changed direction link:open in new tab

--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
                                         <div class="jumboColumnTEXT">
                                             <div class="jumboColumn2">
                                                 <p class="contactTitle">MSIG Assist (Domestic)</p>
-                                                <p class="directionText"><a href="https://www.msig.com.my/branches/">Get Directions</a>
+                                                <p class="directionText"><a href="https://www.msig.com.my/branches/" target="blank">Get Directions</a>
                                                     <a href="https://www.msig.com.my/branches/">
                                                         <span class="glyphicon glyphicon-arrow-right"></span>
                                                     </a>
