fixes mentioned on the email are done

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MSIG - Get In Touch</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.0/css/bootstrap.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> -->
+    <!-- bootstrap  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src='https://www.google.com/recaptcha/api.js'></script>
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous"> -->
     <link href="css/main.css" rel="stylesheet">
@@ -444,9 +447,14 @@
                                 <p class="redText p-l-r-15">(*) Required information</p>
                             </div>
                             <div>
-                                <p class="p-l-r-15 p-t-b-15">We at MSIG are committed to protecting and safe-guarding the privacy of your Personal Data. Please click on either one of the following two to read on:
-                                    <a class="pdfLink" href="assets/pdf/PrivacyNotice_Eng_May2017.pdf" download>Privacy Notice (English)</a>
-                                    <a class="pdfLink" href="assets/pdf/PrivacyNotice_BM_May2017.pdf" download>Privacy Notice (Bahasa Malaysia)</a></p>
+                                <p class="pdfWrapper p-l-r-15">We at MSIG are committed to protecting and safe-guarding the privacy of your Personal Data. Please click on either one of the following two to read on:
+                                    <div class="pdfENG p-l-r-15">
+                                        <a class="pdfLink" href="assets/pdf/PrivacyNotice_Eng_May2017.pdf" download>Privacy Notice (English)</a>
+                                    </div>
+                                    <div class="pdfBM p-l-r-15">
+                                        <a class="pdfLink" href="assets/pdf/PrivacyNotice_BM_May2017.pdf" download>Privacy Notice (Bahasa Malaysia)</a></p>
+
+                                </div>
                                 <div class="generalEnquirySection">
 
                                     <form name="dataEnqForm" id="dataCorrectionForm" action="#" autocomplete="off" class="geForm p-l-r-15">
